--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,19 @@
-
-
+/* Custom Classes retained */
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
-  
-}
-
-.container {
-  display: flex;
-}
-
-/* main {
-  width: 100%;
-  padding: 20px;
-} */
-
-.main-content {
-  width: 100%;
-  margin-left: 250px; /* Adjust according to sidebar's width */
-  transition: margin-left 0.3s;
-  padding: 20px;
 }
 
 .sidebar {
   background: #000;
   color: #fff;
   height: 100vh;
-  width: 250px; 
-  transition: width 0.3s; 
+  width: 250px;
+  transition: width 0.3s;
   display: flex;
   flex-direction: column;
   position: fixed;
-}
-
-.sidebar.collapsed {
-  width: 50px; 
-}
-.sidebar.collapsed ~ .main-content {
-  margin-left: 50px; /* Adjust according to sidebar's collapsed width */
 }
 
 .top_section {
@@ -51,17 +26,8 @@
 
 .logo {
   font-size: 25px;
-  transition: opacity 0.3s; /* Smooth transition for logo visibility */
+  transition: opacity 0.3s;
 }
-
-.bars {
-  display: flex;
-  font-size: 25px;
-  margin-left: auto; 
-  cursor: pointer; 
-}
-
-
 
 .link {
   display: flex;
@@ -82,13 +48,10 @@
   color: #000;
 }
 
-.icon, .link_text {
+.icon,
+.link_text {
   font-size: 18px;
   cursor: pointer;
-}
-
-.app-container {
-  display: flex;
 }
 
 .explore {
@@ -96,67 +59,14 @@
   align-items: center;
   padding: 10px 15px;
   margin: 10px 0;
-  transition: all 0.3s; /* Transition for smooth width and visibility change */
+  transition: all 0.3s;
   background-color: #292626;
   border-radius: 12px;
   overflow: hidden;
 }
 
-.explore.expanded {
-  width: 130px;
-  margin-left: 30px;
-
-}
-
-.explore.collapsed {
-  width: 50px; /* Just enough to show the icon */
-  justify-content: center; /* Center the icon */
-  margin-left: 0;
-  padding: 10px 0; /* Center the icon vertically */
-}
-.explore .icon {
-  font-size: 18px; 
-  margin-right: 10px;  
-} 
-.explore .explore-text {
-  font-size: 18px;
-  color: #fff;
-  white-space: nowrap; 
-  overflow: hidden; 
-  transition: opacity 0.3s; 
-}
-.exploree {
-  display: flex;
-  align-items: center;
-  padding: 10px 15px;
-  /* margin: 10px 0; */
-  transition: all 0.3s; /* Transition for smooth width and visibility change */
-  border-top: 1px solid gray;
-  overflow: hidden;
-  margin-top: auto; 
-  
-}
-
-.exploree.expanded {
-  width: 250px;
-  padding-left: 45px;
-
-}
-
-.exploree.collapsed {
-  width: 50px; /* Just enough to show the icon */
-  justify-content: center; /* Center the icon */
-  margin-left: 0;
-  padding: 10px 0; /* Center the icon vertically */
-}
+.explore .icon,
 .exploree .icon {
-  font-size: 18px; 
-  margin-right: 10px;  
-} 
-.exploree .explore-text {
   font-size: 18px;
-  color: #fff;
-  white-space: nowrap; 
-  overflow: hidden; 
-  transition: opacity 0.3s; 
+  margin-right: 10px;
 }
