--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,7 @@
 .home {
-    background-color: black; /* Set the background color to black */
-    color: white; /* Optional: Set the text color to white for better contrast */
-    min-height: 100vh; /* Ensures the background covers the entire screen height */
+    background-color: black;
+    color: white;
+    min-height: 100vh;
 }
   
 .container{
@@ -9,13 +9,12 @@
     display:flex;
     color:rgb(242, 238, 238);
     width: "100%",
-    /* margin: 8px; */
     }
     .card{
         height:360px;
         width:264px;
         border: 0.5px solid white;
-        /* background-color: rgb(28, 26, 26); */
+        background-color: rgb(28, 26, 26);
         background-color: #171717;
         text-align: center;
         border-radius: 10px;;
@@ -50,7 +49,6 @@
     display: flex;
     text-align: center;
     justify-content: center;
-    /* padding-bottom: 2px;; */
     font-size: 13px;
     height:24px;
     padding-top: 3px;;
@@ -183,3 +181,6 @@
         width:calc(100%-250px);
         margin-left: 250px;
     }    
+
+
+/* DONT DELETE THIS FILE, ALTHOUGH IT'S UNNECESSARY BUT'S IT'S BEING USED BY SOME OF THE FILES SHOWING UNEXPECTED BEHAVIOUR WHEN DELTED */
